--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -68,7 +68,105 @@ a{
     color: lightcoral;
     text-decoration: none;
 }
-h1 {
+.contacts .h1 {
     text-align: center;
     display: block;
+    font-size: 25px;
+    font-weight: 150;
+    margin: 0;
+    padding: 0;
+}
+/* gottne help some code form https://codepen.io/Jemi_Olan/pen/KKwpBmL*/
+
+
+.Contacts .heading span{
+    font-size: 15px;
+    font-size: 350;
+    line-height: 1.5;
+    color: cornflowerblue;
+    margin: 35px 0px 70px;
+    padding: 0;
+}
+   
+
+h2 {
+    font-size: 20px;
+    display: block;
+    font-weight: 500;
+    
+}
+
+span {
+    font-size: 15px;
+    font-size: 350;
+    line-height: 1.5;
+    color: cornflowerblue;
+    margin: 35px 0px 70px;
+    padding: 0;
+      
+}
+
+.Contacts .form-control {
+    font-size: 12px;
+    margin-bottom: 10px;
+    padding: 20px;
+    background: beige;
+    border: 0;
+    border-radius: 10px;
+}
+
+.Contacts button.btn {
+    padding: 8px;
+    border-radius: 10px;
+    font-size: 12px;
+    background: burlywood;
+    color: rgb(233, 203, 203);
+}
+
+.Contacts .title .span {
+    font-size: 15px;
+    font-size: 350;
+    line-height: 1.5;
+    color: crimson;
+    margin: 0px 0px 35px;
+    line-height: 1.5;
+}
+
+.Contacts .Content .info {
+    margin-top: 25px;
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+    color: currentColor;
+    margin-right: 15px;
+    text-align: center;
+    width: 20px;
+}
+
+h3{
+    font-size: 12px;
+    line-height: 1.2;
+} 
+
+.Contacts .Content .info h4 span {
+    font-size: 12px;
+    font-weight: 300;
+    color: darkolivegreen;
+}
+
+.left-row {}
+
+.col-right{}
+
+.footer {
+    position: relative;
+    bottom: 0;
+    margin-bottom:0;
+    color: lightyellow;
+    background-color:lightcoral;
+    width: 100%;
+    height: auto;
+    float: right;
+    text-align: left;
+    font-size: 1.5em;
 }
