--- a/styles/cv.css
+++ b/styles/cv.css
@@ -5,7 +5,7 @@
 
 .navbar-left{
 flex-basis: 20%;
-background:rgb(240, 240, 243);
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -22,6 +22,7 @@ display: grid;
 
 .navbar-left ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(109, 47, 47);
 }
 
 .navbar-left ul li a:hover {
@@ -36,7 +37,7 @@ color: blue;
 
 .navbar-right{
 flex-basis: 80%;
-background:rgb(240, 240, 243);
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -64,11 +65,56 @@ color: blue;
     height: 2px;
     width: 100%;
 }
+
 a{
-    color: lightcoral;
+    color: rgb(104, 75, 75);
     text-decoration: none;
 }
 h1 {
     text-align: center;
     display: block;
 }
+.p{
+    color: black;
+}
+
+img{
+    border-radius: 55%;
+    float: left;
+    padding-right: 2em;
+}
+
+.area_expertise{
+    float: left;
+    padding: 15px 20px 10px 40px
+}
+.work_experience {
+    float: right;
+    padding: 35px 40px 10px 40px
+}
+.education{
+    float: left;
+    padding: 35px 40px 10px 40px
+}
+.interest{
+    float: left;
+    padding: 35px 40px 10px 40px
+}
+.references{
+    float: left;
+    padding: 35px 40px 10px 40px
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    margin-bottom:0;
+    color: rgb(36, 16, 16);
+    background-color: rgb(192, 179, 179);
+    width: 100%;
+    height: auto;
+    float: right;
+    text-align: left;
+    font-size: 1.5em;
+}
+
+
