--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -5,7 +5,7 @@
 
 .navbar-left{
 flex-basis: 20%;
-background:rgb(240, 240, 243);
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -22,6 +22,8 @@ display: grid;
 
 .navbar-left ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(153, 34, 34);
+    font-size: 1.5em;
 }
 
 .navbar-left ul li a:hover {
@@ -30,13 +32,13 @@ color: blue;
 
 .navbar-left ul li a:hover:before, .navbar-right ul li a:hover:after{
     opacity: 1;
-    height: 3px;
+    height: 100px;
     width: 100%;
 }
 
 .navbar-right{
 flex-basis: 80%;
-background:rgb(240, 240, 243);
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -48,11 +50,13 @@ display: grid;
 .navbar-right ul li{
     display: inline-block;
     list-style: none;
-    margin-left: 40px;
+    margin-left: 100px;
 }
 
 .navbar-right ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(206, 15, 15);
+    font-size: 1em;
 }
 
 .navbar-right ul li a:hover {
@@ -61,81 +65,51 @@ color: blue;
 
 .navbar-right ul li a:hover:before, .navbar-right ul li a:hover:after{
     opacity: 1;
-    height: 2px;
+    height: 50px;
     width: 100%;
 }
+
+body{
+    font-family: 'Yeon Sung', cursive;
+    background-image: linear-gradient(150deg, rgb(243, 196, 196) 39%, rgb(68, 71, 71) 96%);
+}
+
+.media{
+    text-align: center;
+    margin: 2em;
+}
+
 a{
-    color: lightcoral;
+    color:rgb(63, 57, 55);
     text-decoration: none;
 }
-.contacts .h1 {
+
+.contacts h1{
     text-align: center;
+    font-size: 3rem;
     display: block;
-    font-size: 25px;
-    font-weight: 150;
     margin: 0;
     padding: 0;
 }
 /* gottne help some code form https://codepen.io/Jemi_Olan/pen/KKwpBmL*/
 
-
-.Contacts .heading span{
-    font-size: 15px;
-    font-size: 350;
-    line-height: 1.5;
-    color: cornflowerblue;
-    margin: 35px 0px 70px;
-    padding: 0;
+h1{
+    color: rgb(68, 10, 10);
 }
-   
 
 h2 {
-    font-size: 20px;
+  
     display: block;
     font-weight: 500;
-    
+    color: rgb(68, 10, 10);    
 }
 
-span {
-    font-size: 15px;
-    font-size: 350;
-    line-height: 1.5;
-    color: cornflowerblue;
-    margin: 35px 0px 70px;
-    padding: 0;
-      
-}
 
-.Contacts .form-control {
-    font-size: 12px;
-    margin-bottom: 10px;
-    padding: 20px;
-    background: beige;
-    border: 0;
-    border-radius: 10px;
-}
-
-.Contacts button.btn {
-    padding: 8px;
-    border-radius: 10px;
-    font-size: 12px;
-    background: burlywood;
-    color: rgb(233, 203, 203);
-}
-
-.Contacts .title .span {
-    font-size: 15px;
-    font-size: 350;
-    line-height: 1.5;
-    color: crimson;
-    margin: 0px 0px 35px;
-    line-height: 1.5;
-}
 
 .Contacts .Content .info {
     margin-top: 25px;
     font-size: 25px;
-    padding: 0;
+    padding: 2em;
     margin: 0;
     color: currentColor;
     margin-right: 15px;
@@ -143,40 +117,61 @@ span {
     width: 20px;
 }
 
-h3{
-    font-size: 12px;
-    line-height: 1.2;
+h4{
+    color: rgb(104, 75, 75);   
 } 
 
-.Contacts .Content .info h4 span {
-    font-size: 12px;
-    font-weight: 300;
-    color: darkolivegreen;
+p{
+    color: rgb(68, 10, 10);   
+}
+.info{
+    color: rgb(68, 10, 10); 
 }
 .text-center {
+    margin: 5em;
     text-align: center;
 }
 
 .left-row {
-    width: 45%;
+    width: 35%;
     float: left;
+    padding: 15px 20px 10px 20px;
+     margin: 1.5em;
 }
 
 .col-right{
     width: 30%;
     float: right;
-    margin-bottom: 2em;
+    margin-left: 1em;
+    padding: 25px 40px 20px 40px;
+    
 }
 
-.footer {
+.col-details1{
+    margin: 1em;
+}
+.col-details2{
+    margin: 1em;
+}
+.col-details3{
+    margin: 1em;
+}
+.form-details{
+    margin: 1em;
+}
+.btn-block{
+    margin: 1em;
+}
+footer{
     position: fixed;
     bottom: 0;
     margin-bottom:0;
-    color: lightyellow;
-    background-color:lightcoral;
+    color: rgb(179, 24, 24);
+    background-color: rgb(192, 179, 179);
     width: 100%;
     height: auto;
     float: right;
     text-align: left;
-    font-size: 1.5em;
+    font-size: 1.25em;
+    padding: 1px;
 }
