--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,11 +1,12 @@
+/* from .nav-bar to h1, inclusing the footer similar codes to styles.css */
 .nav-bar {
     display: flex;
     height: 100;
 }
-/* from .nav-bar to h1, inclusing the footer similar codes to styles.css */
+
 .navbar-left{
 flex-basis: 20%;
-background:rgb(240, 240, 243);
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -22,6 +23,8 @@ display: grid;
 
 .navbar-left ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(153, 34, 34);
+    font-size: 1.5em;
 }
 
 .navbar-left ul li a:hover {
@@ -30,13 +33,13 @@ color: blue;
 
 .navbar-left ul li a:hover:before, .navbar-right ul li a:hover:after{
     opacity: 1;
-    height: 3px;
+    height: 100px;
     width: 100%;
 }
 
 .navbar-right{
 flex-basis: 80%;
-background:rgb(240, 240, 243);
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -48,11 +51,13 @@ display: grid;
 .navbar-right ul li{
     display: inline-block;
     list-style: none;
-    margin-left: 40px;
+    margin-left: 100px;
 }
 
 .navbar-right ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(206, 15, 15);
+    font-size: 1em;
 }
 
 .navbar-right ul li a:hover {
@@ -61,17 +66,22 @@ color: blue;
 
 .navbar-right ul li a:hover:before, .navbar-right ul li a:hover:after{
     opacity: 1;
-    height: 2px;
+    height: 50px;
     width: 100%;
 }
+body{
+    background-image: linear-gradient(150deg, rgb(243, 196, 196) 39%, rgb(68, 71, 71) 96%);
+}
+
 a{
-    color: lightcoral;
+    color: rgb(61, 54, 54);
     text-decoration: none;
+    
 }
 h1 {
     text-align: center;
     display: block;
-    color: lightcoral;
+    color: rgb(136, 31, 31);
 }
 
 hr {
@@ -187,15 +197,16 @@ hr {
         font-family:'Yeon Sung', cursive;
     }
     
-footer {
+    footer{
         position: fixed;
         bottom: 0;
         margin-bottom:0;
-        color: rgb(36, 16, 16);
-    background-color: rgb(192, 179, 179);
+        color: rgb(179, 24, 24);
+        background-color: rgb(192, 179, 179);
         width: 100%;
         height: auto;
         float: right;
         text-align: left;
-        font-size: 1.5em;
- }
+        font-size: 1.25em;
+        padding: 1px;
+    }
