--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,11 +15,11 @@ body{
 /* i got the font- family from font-family: 'Yeon Sung', cursive;  */
 
 img {
-    margin-top: 25px;
+    margin: 2.5em;
     border-style: none;
     border-radius: 25%;
     filter: grayscale(0);
-    width: 15vw;
+    width: 25vw;
     transform: rotate(-90deg);
 }
 
@@ -32,7 +32,7 @@ img {
 
 .navbar-left{
 flex-basis: 20%;
-background:ghostwhite;
+background:rgb(217, 217, 221);
 display: grid;
 }
 
@@ -49,6 +49,8 @@ display: grid;
 
 .navbar-left ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(36, 16, 16);
+    font-size: 1.5em;
 }
 
 .navbar-left ul li a:hover {
@@ -63,7 +65,7 @@ color: blue;
 
 .navbar-right{
 flex-basis: 80%;
-background:ghostwhite;
+background:rgb(217, 217, 221);
 display: grid;
 
 }
@@ -81,6 +83,8 @@ display: grid;
 
 .navbar-right ul li a {
     transition: all 200ms ease-in-out;
+    color: rgb(36, 16, 16);
+    font-size: 1.25rem;
 }
 
 .navbar-right ul li a:hover {
@@ -109,8 +113,10 @@ p {
 
 
 a{
-    color: lightcoral;
+    color: lightyellow;
     text-decoration: none;
+    padding: 0.5rem;
+    margin-bottom: 2%;
 }
 
 
@@ -123,16 +129,16 @@ a{
 }*/
 
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     margin-bottom:0;
-    color: rgb(36, 16, 16);
+    color:  rgb(36, 16, 16);
     background-color: rgb(192, 179, 179);
     width: 100%;
     height: auto;
     float: right;
     text-align: left;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 
