--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,3 +1,4 @@
+/* from .nav-bar to h1, inclusing the footer similar codes to cv, portfolio and styles.css */
 .nav-bar {
     display: flex;
     height: 100;
@@ -68,22 +69,25 @@ color: blue;
     height: 50px;
     width: 100%;
 }
-
+/* the colour gradient code was inspiired from https://developer.mozilla.org/en-US/docs/
+Learn/CSS/Building_blocks/Backgrounds_and_borders- this showed me how to do it
+and i changed the code to make it what was morderned and eye appealing*/
+/*also, the morden font gotten from google and used here*/
 body{
     font-family: 'Yeon Sung', cursive;
     background-image: linear-gradient(150deg, rgb(243, 196, 196) 39%, rgb(68, 71, 71) 96%);
 }
-
+/* this is to align and space the social media logo*/
 .media{
     text-align: center;
     margin: 2em;
 }
-
+/*font colour and design*/
 a{
     color:rgb(63, 57, 55);
     text-decoration: none;
 }
-
+/*alignment of text container, font size, display and spacing*/
 .contacts h1{
     text-align: center;
     font-size: 3rem;
@@ -91,12 +95,12 @@ a{
     margin: 0;
     padding: 0;
 }
-/* gottne help some code form https://codepen.io/Jemi_Olan/pen/KKwpBmL*/
-
+/* gotten help some code form https://codepen.io/Jemi_Olan/pen/KKwpBmL*/
+/*font colour for header*/
 h1{
     color: rgb(68, 10, 10);
 }
-
+/*font colour for sub-heading*/
 h2 {
   
     display: block;
@@ -104,41 +108,31 @@ h2 {
     color: rgb(68, 10, 10);    
 }
 
-
-
-.Contacts .Content .info {
-    margin-top: 25px;
-    font-size: 25px;
-    padding: 2em;
-    margin: 0;
-    color: currentColor;
-    margin-right: 15px;
-    text-align: center;
-    width: 20px;
-}
-
+/*font colour of subheading*/
 h4{
     color: rgb(104, 75, 75);   
 } 
-
+/*font colour of paragraphs*/
 p{
     color: rgb(68, 10, 10);   
 }
+/*font colour of address*/
 .info{
     color: rgb(68, 10, 10); 
 }
+/*sligning of text container*/
 .text-center {
     margin: 5em;
     text-align: center;
 }
-
+/*positioning of contact details and spacing*/
 .left-row {
     width: 35%;
     float: left;
     padding: 15px 20px 10px 20px;
      margin: 1.5em;
 }
-
+/*positioning of contact form and spacing*/
 .col-right{
     width: 30%;
     float: right;
@@ -146,7 +140,7 @@ p{
     padding: 25px 40px 20px 40px;
     
 }
-
+/*contact form spacing*/
 .col-details1{
     margin: 1em;
 }
@@ -162,6 +156,7 @@ p{
 .btn-block{
     margin: 1em;
 }
+/*similar footer for portfolio and cv*/
 footer{
     position: fixed;
     bottom: 0;
