--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -69,21 +69,26 @@ color: blue;
     height: 50px;
     width: 100%;
 }
+/* the colour gradient code was inspiired from https://developer.mozilla.org/en-US/docs/
+Learn/CSS/Building_blocks/Backgrounds_and_borders- this showed me how to do it
+and i changed the code to make it what was morderned and eye appealing*/
 body{
     background-image: linear-gradient(150deg, rgb(243, 196, 196) 39%, rgb(68, 71, 71) 96%);
 }
 
+/*colour of social media logo and to prevent line on the header page*/
 a{
     color: rgb(61, 54, 54);
     text-decoration: none;
     
 }
+/*this is to center the title, display type and font colour*/
 h1 {
     text-align: center;
     display: block;
     color: rgb(136, 31, 31);
 }
-
+/*the s[acing and border used in this code as container for furture purposes*/
 hr {
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -91,16 +96,13 @@ hr {
     border-top: 1px solid rgba(0, 0,0, 0.1);
 }
 
-.text{
-    color: white;
-    text-align: left;
-}
+/*space | gap between each boxes*/
 .container {
     
     margin: 2rem auto; 
 
   }
-
+/*grid arrangement for each box*/
  .gallery {
   display: grid;
   grid-template-columns: repeat (6, 1fr);
@@ -176,7 +178,7 @@ hr {
     z-index: 1;
 
     }
-    
+    /*hovering effect on each boxes*/
     .gallery-item:hover  {
         filter: grayscale(1);
     }
@@ -189,14 +191,15 @@ hr {
     .gallery-item:hover {
         box-shadow: 0 10px 20px rgba(92, 26, 26, 0.8);
     }
-    
+    /*this is used to display the hidden text on the box which will be displayed
+when hovering at the boxes*/
     .text {
         color: white;
         font-size: 1.5em;
         padding: 16px 32px;
         font-family:'Yeon Sung', cursive;
     }
-    
+    /*footer styling*/
     footer{
         position: fixed;
         bottom: 0;
