--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,7 +99,8 @@ hr {
 /*space | gap between each boxes*/
 .container {
     
-    margin: 2rem auto; 
+    margin: 3em auto; 
+    padding-top: 3em;
 
   }
 /*grid arrangement for each box*/
@@ -108,6 +109,7 @@ hr {
   grid-template-columns: repeat (6, 1fr);
   grid-template-rows: repeat (6, 5vw);
   grid-gap: 15px;
+  margin-top: 5em;
     }
 
 .gallery_img{
